--- a/urule-console/src/main/resources/html/rule-flow-designer.html
+++ b/urule-console/src/main/resources/html/rule-flow-designer.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>决策流设计器</title>
+ <style>
+
+  .fd-canvas-container{
+   min-height: 500px;
+  }
+ </style>
  <script type="text/javascript" src="${contextPath}/urule/res/urule-asserts/venderjs/jquery.min.js"></script>
   <script type="text/javascript" src="${contextPath}/urule/res/urule-asserts/venderjs/bootbox.min.js"></script>
 </head>
